--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ section {
     display: none;
     flex-direction: column;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: #F28D35 ;
     position: absolute;
     top: 60px;
     left: 0;
@@ -308,6 +308,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
