--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ section {
 
 #hero, #about, #projects, #skills, #contact {
       background-color: #1a1a1a;
-      color: #DDE6ED;
+      color: #F28D35;
     }
 
 
@@ -308,6 +308,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
