--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ section {
 .hero-content p {
   font-size: 1.2rem;
   max-width: 700px;
+   color: #F28D35;
 }
 
 .profil-img {
@@ -308,6 +309,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
