--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ section {
   text-align: center;
 }
 
-#hero,, #projects, #skills, #contact {
+#hero, #projects, #skills, #contact {
       background-color: #1a1a1a;
       color: #F28D35;
     }
@@ -312,6 +312,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
