--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   width: 10px; /* Taille discrète */
   height: 10px;
   border-radius: 50%; /* Cercle */
-  background-color: #000; /* Noir par défaut */
+  background-color: #F28D35 ; /* orange par défaut */
   pointer-events: none; /* Ne bloque pas les clics */
   z-index: 9999; /* Au-dessus de tout */
   transition: transform 0.1s ease-out, width 0.2s ease-out, height 0.2s ease-out, background-color 0.2s ease-out;
@@ -332,6 +332,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
