--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ header {
   font-size: 2rem;
   cursor: pointer;
   border: none;
-   background-color: #000000 !important;
+   background-color: #666666 !important;
 }
 
 nav {
@@ -294,7 +294,7 @@ section {
 }
 
 #contact a:hover {
-  background: 	#666666;
+  background: 	#F28D35 ;
 }
 
 @media (max-width: 768px) {
@@ -307,7 +307,8 @@ section {
     display: none;
     flex-direction: column;
     width: 100%;
-    background-color: #F28D35 ;
+    background-color:#666666;
+      #F28D35 ;
     position: absolute;
     top: 60px;
     left: 0;
@@ -357,6 +358,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
