--- a/style.css
+++ b/style.css
@@ -85,13 +85,13 @@ header {
   font-size: 2rem;
   cursor: pointer;
   border: none;
-   background-color: #666666 !important;
+   background-color: #F28D35 !important;
 }
 
 nav {
   display: flex;
   gap: 1.5rem;
-  background-color: #666666;
+  background-color: #F28D35;
 }
 
 nav a {
@@ -308,7 +308,7 @@ section {
     flex-direction: column;
     width: 100%;
     background-color:#666666;
-      #F28D35 ;
+     
     position: absolute;
     top: 60px;
     left: 0;
@@ -358,6 +358,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
