--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section {
   text-align: center;
 }
 
-#hero, {
+#hero {
       background-color: #1a1a1a;
       color: #F28D35;
     }
@@ -370,6 +370,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
