--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ section {
   display: inline-block;
   margin-top: 1rem;
   padding: 0.75rem 1.5rem;
-  background: var(--accent-color);
+  background: #666666 var(--accent-color);
   color: #fff;
   font-weight: 600;
   font-size: 1.2rem;
@@ -311,7 +311,7 @@ section {
 
 @media (max-width: 768px) {
   .menu-toggle {
-     background-color: #666666 !important;
+     background-color: #666666;
     display: block;
   }
 
@@ -370,6 +370,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
