--- a/style.css
+++ b/style.css
@@ -363,13 +363,14 @@ section {
 
 .project-card h3 {
   margin-bottom: 10px;
-  color: #fefefe;
+  color: #F28D35;
 }
 
 .project-card p {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
