--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 
     .link {
       font-size: 5.5rem;
-      color: #ddd;
+      color: #F28D35;
       text-decoration: none;
       display: block;
       margin: 2rem 0;
@@ -381,6 +381,7 @@ section {
   font-size: 14px;
   color: #fefefe;
 }
+
 
 
 
